--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-kakao-maps-sdk": "^1.2.0",
-    "react-photoswipe-gallery": "^2.2.7"
+    "react-photoswipe-gallery": "^2.2.7",
+    "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
